src/style.scss
@font-face {
    font-family: 'Poppins';
    src: url(./Poppins-Regular.ttf);
}

// ----------------- Global ----------------- //
:root {
    --bg-color-light: rgb(44, 44, 56);
    --bg-color-dark: rgb(36, 36, 46);
    --bg-color-purple: rgb(116, 82, 227);
    
    --accent-color-grey: rgba(200, 200, 200, 0.6);
    --accent-color-darkGrey: rgba(200, 200, 200, 0.9);

    --font-color-primary: white;
    --font-color-secondary: #5A5B69;

    --font-size-small: 0.75rem;

    --letter-spacing: 2px;
    
    --padding-main: 20px;
    --padding-less: 10px;

    --gap-main: 10px;
    
    --border-radius-hi: 20px;
    --border-radius-lo: 8px;

    --box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  background: var(--accent-color-darkGrey);
  border-radius: 10px;
}

* {
    font-family: 'Poppins', sans-serif;

    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
  height: 100vh;
  
  display: flex;
  
  color: var(--font-color-primary);
}

textarea {
  resize: none;
}

// ----------------- Component Classes ------ //
.settingsIcon {
  background: none;
  border: none;
  color: var(--font-color-primary);
  font-weight: bold;

  cursor: pointer;

  border-radius: 50%;
  width: 25px;
  height: 25px;
}

.settingsIcon:hover {
  background-color: var(--accent-color-darkGrey);
}

.dropdownContainer {
  position: relative;
}

.dropdown {
  display: none;
  position: absolute;
  top: 40px;
  right: 0;
  z-index: 1;

  background-color: var(--bg-color-light);
  width: 160px;
  box-shadow: var(--box-shadow); 
  padding: var(--padding-main);
  border-radius: var(--border-radius-lo);

  font-size: 0.8rem;

  cursor: pointer;
}

// ----------------- Components ------------- //

.sidebar {
  padding: var(--padding-main);
  flex: 1;
  background-color: var(--bg-color-light);

  p {
    cursor: pointer;
    border-radius: 3px;
  }

  &__createNew {
    color: var(--bg-color-purple);
  }

  p:hover {
    transform: scale(1.1);
    background-color: grey;
  }
}

.currentProject {
  flex: 3;
  
  background-color: var(--bg-color-dark);

  &__header {
    display: flex;
    justify-content: space-between;
    align-items: center;

    padding: 16px;
    margin-bottom: 10px;

    background-color: var(--bg-color-light);
  }

  &__header-rightContent {
    display: flex;
    align-items: center;
    gap: 10px;
  }

  &__header-addTask {
    border-radius: var(--border-radius-hi);
    padding: 10px 20px;
    background-color: var(--bg-color-purple);
    color: var(--font-color-primary);
    border: none;

    cursor: pointer;
  }

  &__header-projectSettings:hover {
    background-color: var(--accent-color-grey);
  }

  // &__tasks > * {
  //   background-color: var(--bg-color-light);
    
  //   border-radius: var(--border-radius-lo);
    
  //   width: 50%;
    
  //   margin: 20px auto;
    
  //   text-align: center;
    
  //   padding: 20px;
  // }
  &__tasks {
    display: flex;
    justify-content: center;
    gap: var(--gap-main);
  }
  &__tasks > div {
    width: 200px;
  }
  &__tasks > div > h3 {
    font-size: var(--font-size-small);
    color: var(--font-color-secondary);
    letter-spacing: var(--letter-spacing);

    margin-bottom: 10px;
  }
  &__tasks > div > div {
    display: flex;
    flex-direction: column;
    gap: var(--padding-less);
  }
  &__tasks > div > div > div {
    background-color: var(--bg-color-light);
    border-radius: var(--border-radius-lo);
    padding: var(--padding-less);
  }
  &__tasks > div > div > div > p {
    font-size: var(--font-size-small);
  }
}

.modalContainer {
  position: absolute;
  height: 100vh;
  width : 100vw;
  
  background-color: rgba(0, 0, 0, 0.5);
  
  display: flex;
  justify-content: center;
  align-items: center;
  
  pointer-events: none;
  opacity: 0;

  &--show {
    pointer-events: auto;
    opacity: 1;
  }
}

.addTaskModal, .addProjectModal, .taskViewModal{
  width: 400px;
  padding: var(--padding-main);
  border-radius: var(--border-radius-lo);
  
  background-color: var(--bg-color-light);
  
  display: flex;
  flex-direction: column;
  gap: 10px;

  input,textarea,select,option {
    background: none;
    border: 1px solid rgba(200, 200, 200, 0.2);
    border-radius: var(--border-radius-lo);
    padding: 5px;
    
    color: white;
  }
  &__subtasksContainer {
    display: flex;
    flex-direction: column;
    gap: 10px;
    overflow: auto;
    max-height: 86px;
  }
  &__subtask {
    display: flex;
  }
  &__subtask input {
    flex: 1;
  }
  &__subtask-remove {
    background: none;
    border: none;
    
    padding: 4px;
    font-size: 20px;
    font-weight: bold;
    
    color: var(--accent-color-grey);
  }
  &__addNewSubtask {
    border: none;
    
    border-radius: var(--border-radius-hi);
    padding: 10px;
    
    background-color: white;
    color: grey;
    font-weight: bold;
  }
  &__createTask {
      background: none;
      border: none;
  
      border-radius: var(--border-radius-hi);
      padding: 10px;
  
      background-color: var(--bg-color-purple);
      color: white;
      font-weight: bold;
  }
}

.taskViewModal {
  &__topContent {
    display: flex;
    justify-content: space-between;
  }
  &__subtaskContainer {
    display: flex;
    flex-direction: column;
    gap: var(--gap-main);
  }
  &__subtask {
    align-items: center;
    gap: var(--gap-main);

    padding: var(--padding-less);
    border-radius: var(--border-radius-lo);

    background-color: var(--bg-color-dark);
  }
  &__subtask > input {
    flex: 0;
  }

}
 

